--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
 body {
   background: antiquewhite;
 }
+h1 {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", Arial, sans-serif;
+}
