--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,5 @@ body {
   background: antiquewhite;
 }
 h1 {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  font-family: "Franklin Gothic Medium", Arial, sans-serif;
+  font-family: "Rubik", sans-serif;
 }
