--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,9 @@ body {
   background-image: url("http://i.imgur.com/CFjU41M.jpg");
   margin: auto;
   background-repeat: no-repeat;
-  background-size: 100% 42%;
-  background-color: lightblue;
+  background-size: 100% 56%;
+  background-color: rgb(67, 5, 117);
+  position: relative;
 
   max-width: 1920px;
   max-height: 1080px;
@@ -12,21 +13,25 @@ body {
 h1 {
   font-family: "Rubik", sans-serif;
   color: black;
+  outline: 5px solid teal;
 }
 body {
   color: black;
-  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+  position: relative;
 }
 img {
   width: 360px;
+  height: 360px;
+  border: 5px solid teal;
+  position: relative;
 }
 
 /* LightGallery Position Correction */
+
 div.lg-item,
 div.lg-loaded,
 div.lg-current,
 div.lg-complete {
-  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
