--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
   margin: auto;
   background-repeat: no-repeat;
   background-size: 100% 56%;
-  background-color: rgb(67, 5, 117);
+  background-color: rgb(255, 253, 208)
   position: relative;
 
   max-width: 1920px;
